sonar扫描问题